* Wed Jan 15 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.0-0
- Add EL8 Support
- Removed incron support in favor of using systemd path units to run
  simp_generate_types
- Attempts to activate the incron code will result in a warning message

* Wed Jan 08 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 8.0.0-0
- Added optional management of the Facter configuration file.

* Mon Jan 06 2020 Michael Morrone <michael.morrone@onyxpoint.com> - 8.0.0-0
- Removed the deprecated CA CRL pull cron job and the corresponding
  pupmod::ca_crl_pull_interval parameter
- Removed deprecated auth.conf support for the legacy pki module and
  the corresponding parameters:
  - pupmod::master::simp_auth::legacy_cacerts_all
  - pupmod::master::simp_auth::legacy_mcollective_all
  - pupmod::master::simp_auth::legacy_pki_keytabs_from_host
- Removed the deprecated pupmod::master::simp_auth::server_distribution parameter

* Tue Nov 19 2019 Luke Stigdon <git@lukestigdon.com> - 7.11.1-0
- Correct pupmod::master::profiler_output_file option name

* Mon Sep 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.11.1-0
- Ensure that pupmod::pass_two does not conflict with the internal PE
  configuration code for group ownership of puppet.conf
- Support simp-simplib < 5

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 7.11.1-0
- Support puppetlabs/concat 6.x and puppetlabs/inifile 3.x.

* Thu Jul 04 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.11.0-0
- Add a pupmod::server_distribution function for more accurately determining
  the version of the puppet server installed on the target system.
- Refactor some of the underlying code to use the new function and be safer for
  PE installations.

* Wed Jul 03 2019 Bob Vincent <pillarsdotnet@gmail.com> - 7.11.0-0
- Ensure that the 'environment' setting in puppet.conf is forced into the
  'agent' section.
- Ensure that the 'environment' setting in puppet.conf does not exist in the
  'main' section.
